--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,9 @@
 DOCKER_USER_ID=userid
+
+SINGULARITY_IMAGE="/path/to/image.sif"
+HOST_APP_DIR="/path/to/dir"
+HOST_DATA_DIR="/path/to/dir"
+
+SCRATCH_DIR="/path/to/dir"
+SRA_DOWNLOAD_DIR=$SCRATCH_DIR"/path/to/dir"
+SRA_COLLATE_DIR=$SCRATCH_DIR"/path/to/dir"
