--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Singularity image folder
+singularity_image
+
+# Working directory for data
+data
+
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
