feat: decoupled fastp read processing

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,6 @@ HOST_DATA_DIR="/path/to/dir"
 SCRATCH_DIR="/path/to/dir"
 SRA_DOWNLOAD_DIR=$SCRATCH_DIR"/path/to/dir"
 SRA_COLLATE_DIR=$SCRATCH_DIR"/path/to/dir"
+FASTQ_TRIMMED_DIR=$SCRATCH_DIR"/path/to/dir"
+R1_ADAPTER="sequence"
+R2_ADAPTER="sequence2"
