feat: replaced trinity with rnaspades and decoupled

--- a/.env-example
+++ b/.env-example
@@ -10,3 +10,5 @@ SRA_COLLATE_DIR=$SCRATCH_DIR"/path/to/dir"
 FASTQ_TRIMMED_DIR=$SCRATCH_DIR"/path/to/dir"
 R1_ADAPTER="sequence"
 R2_ADAPTER="sequence2"
+RNASPADES_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
+RNASPADES_COLLATED_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
