--- a/.env-example
+++ b/.env-example
@@ -13,3 +13,6 @@ R1_ADAPTER="sequence"
 R2_ADAPTER="sequence2"
 RNASPADES_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
 RNASPADES_COLLATED_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
+
+# Thinning
+KMER_COVERAGE_FILTERED_DIR=$SCRATCH_DIR"/path/to/dir"
