feat: first pass at evigene analysis

--- a/.env-example
+++ b/.env-example
@@ -17,3 +17,4 @@ RNASPADES_COLLATED_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
 # Thinning
 KMER_COVERAGE_FILTERED_DIR=$SCRATCH_DIR"/path/to/dir"
 RNASPADES_ASSEMBLIES_MERGED=$SCRATCH_DIR"/path/to/dir"
+EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
