fix: fine tuning resource requests and minor folder structure changes

--- a/.env-example
+++ b/.env-example
@@ -5,6 +5,8 @@ HOST_APP_DIR="/path/to/dir"
 HOST_DATA_DIR="/path/to/dir"
 
 SCRATCH_DIR="/path/to/dir"
+
+# Assembly
 SRA_LIST_FILE="/path/to/file.txt"
 SRA_DOWNLOAD_DIR=$SCRATCH_DIR"/path/to/dir"
 SRA_COLLATE_DIR=$SCRATCH_DIR"/path/to/dir"
