feat: code to download nr database and extract sequences based on taxon id

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,5 @@
 DOCKER_USER_ID=userid
+NCBI_API_KEY=ncbikey
 
 SINGULARITY_IMAGE="/path/to/image.sif"
 HOST_APP_DIR="/path/to/dir"
@@ -20,3 +21,7 @@ RNASPADES_COLLATED_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
 KMER_COVERAGE_FILTERED_DIR=$SCRATCH_DIR"/path/to/dir"
 RNASPADES_ASSEMBLIES_MERGED=$SCRATCH_DIR"/path/to/dir"
 EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
+
+# Annotation
+HOST_BLASTDB_DIR="/path/to/dir"
+PROTEIN_ACCESSION_DIR="/path/to/dir"
