feat: code to make custom blast db, prep db for diamond, and test diamond blastp

--- a/.env-example
+++ b/.env-example
@@ -23,5 +23,6 @@ RNASPADES_ASSEMBLIES_MERGED=$SCRATCH_DIR"/path/to/dir"
 EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
 
 # Annotation
-HOST_BLASTDB_DIR="/path/to/dir"
-PROTEIN_ACCESSION_DIR="/path/to/dir"
+NR_BLASTDB_DIR="/path/to/dir"
+TATAT_BLASTDB_DIR="/path/to/dir"
+DIAMOND_HITS_DIR="/path/to/dir"
