feat: defined command for running BUSCO

--- a/.env-example
+++ b/.env-example
@@ -26,3 +26,6 @@ EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
 NR_BLASTDB_DIR="/path/to/dir"
 TATAT_BLASTDB_DIR="/path/to/dir"
 DIAMOND_HITS_DIR="/path/to/dir"
+
+# Post annotation QC
+BUSCO_DATA_DIR="/path/to/dir"
