feat: added salmon and mds code for post annotation qc

--- a/.env-example
+++ b/.env-example
@@ -29,3 +29,5 @@ DIAMOND_HITS_DIR="/path/to/dir"
 
 # Post annotation QC
 BUSCO_DATA_DIR="/path/to/dir"
+SALMON_COUNTS_DIR="/path/to/dir"
+SALMON_COUNTS_COLLATED_DIR="/path/to/dir"
