feat: added code for ncbi nt blastdb pull

--- a/.env-example
+++ b/.env-example
@@ -24,6 +24,7 @@ EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
 
 # Annotation
 NR_BLASTDB_DIR="/path/to/dir"
+NT_BLASTDB_DIR="/path/to/dir"
 TATAT_BLASTDB_DIR="/path/to/dir"
 DIAMOND_HITS_DIR="/path/to/dir"
 
