feat: refactor to use core_nt blast database and blastn instead of nr and diamond

--- a/.env-example
+++ b/.env-example
@@ -23,10 +23,10 @@ RNASPADES_ASSEMBLIES_MERGED=$SCRATCH_DIR"/path/to/dir"
 EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
 
 # Annotation
-NR_BLASTDB_DIR="/path/to/dir"
-NT_BLASTDB_DIR="/path/to/dir"
+CORE_NT_BLASTDB_DIR="/path/to/dir"
 TATAT_BLASTDB_DIR="/path/to/dir"
-DIAMOND_HITS_DIR="/path/to/dir"
+BLAST_HITS_DIR="/path/to/dir"
+ACCESSION_GENE_MAPPING_DIR="/path/to/dir"
 
 # Post annotation QC
 BUSCO_DATA_DIR="/path/to/dir"
