--- a/.env-example
+++ b/.env-example
@@ -2,13 +2,13 @@ DOCKER_USER_ID=userid
 NCBI_API_KEY=ncbikey
 
 SINGULARITY_IMAGE="/path/to/image.sif"
-HOST_APP_DIR="/path/to/dir"
-HOST_DATA_DIR="/path/to/dir"
+APP_DIR="/path/to/dir"
+DATA_DIR="/path/to/dir"
+METADATA_DIR=$DATA_DIR"/metadata"
 
 SCRATCH_DIR="/path/to/dir"
 
 # Assembly
-SRA_LIST_FILE="/path/to/file.txt"
 SRA_DOWNLOAD_DIR=$SCRATCH_DIR"/path/to/dir"
 SRA_COLLATE_DIR=$SCRATCH_DIR"/path/to/dir"
 FASTQ_TRIMMED_DIR=$SCRATCH_DIR"/path/to/dir"
