feat: refactoring for thinning step and tutorial

--- a/.env-example
+++ b/.env-example
@@ -4,7 +4,8 @@ NCBI_API_KEY=ncbikey
 SINGULARITY_IMAGE="/path/to/image.sif"
 APP_DIR="/path/to/dir"
 DATA_DIR="/path/to/dir"
-METADATA_DIR=$DATA_DIR"/metadata"
+METADATA_DIR=$DATA_DIR"/path/to/dir"
+TRANSCRIPTOME_DATA_DIR=$DATA_DIR"/path/to/dir"
 
 SCRATCH_DIR="/path/to/dir"
 
@@ -18,8 +19,6 @@ RNASPADES_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
 RNASPADES_COLLATED_ASSEMBLY_DIR=$SCRATCH_DIR"/path/to/dir"
 
 # Thinning
-KMER_COVERAGE_FILTERED_DIR=$SCRATCH_DIR"/path/to/dir"
-RNASPADES_ASSEMBLIES_MERGED=$SCRATCH_DIR"/path/to/dir"
 EVIGENE_OUTPUT_DIR=$SCRATCH_DIR"/path/to/dir"
 
 # Annotation
