fix: added rousettus tutorial directory for convenience

--- a/.env-example
+++ b/.env-example
@@ -31,3 +31,6 @@ ACCESSION_GENE_MAPPING_DIR="/path/to/dir"
 BUSCO_DATA_DIR="/path/to/dir"
 SALMON_COUNTS_DIR="/path/to/dir"
 SALMON_COUNTS_COLLATED_DIR="/path/to/dir"
+
+# Tutorial
+ROUSETTUS_TUTORIAL_DIR="/path/to/dir"
