feat: generate sqlite db and table for sample metadata

--- a/.env-example
+++ b/.env-example
@@ -5,6 +5,7 @@ SINGULARITY_IMAGE="/path/to/image.sif"
 APP_DIR="/path/to/dir"
 DATA_DIR="/path/to/dir"
 METADATA_DIR=$DATA_DIR"/path/to/dir"
+SQLITE_DB_DIR=$DATA_DIR"/path/to/dir"
 TRANSCRIPTOME_DATA_DIR=$DATA_DIR"/path/to/dir"
 
 SCRATCH_DIR="/path/to/dir"
