--- a/.env-example
+++ b/.env-example
@@ -34,3 +34,6 @@ SALMON_COUNTS_COLLATED_DIR="/path/to/dir"
 # Tutorial
 ROUSETTUS_TUTORIAL_DIR="/path/to/dir"
 POST_QC_DIR="/path/to/dir"
+
+# ncRNA
+NCRNA_DIR="/path/to/dir"
