fix: added comments for variables

--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,11 @@
+# Docker user id only needed for dev work
 DOCKER_USER_ID=userid
+
+# NCBI API key highly recommended for annotation stage
 NCBI_API_KEY=ncbikey
 
+# General paths
 SINGULARITY_IMAGE="/path/to/image.sif"
-APP_DIR="/path/to/dir"
 DATA_DIR="/path/to/dir"
 SQLITE_DB_DIR=$DATA_DIR"/path/to/dir"
 TRANSCRIPTOME_DATA_DIR=$DATA_DIR"/path/to/dir"
