feat: added steps for pushing image to GitHub registry

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,6 @@
-# Docker user id only needed for dev work
+# Docker and GitHub user id only needed for dev work
 DOCKER_USER_ID=userid
+GITHUB_USER_ID=userid
 
 # NCBI API key highly recommended for annotation stage
 NCBI_API_KEY=ncbikey
